examples/5_FullScaleServiceWithIngress/istio-hello-world-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-v1
  labels:
    app: nginx
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      version: v1
  template:
    metadata:
      labels:
        app: nginx
        version: v1
    spec:
      containers:
        - name: nginx
          image: nginx
          imagePullPolicy: IfNotPresent #Always
          ports:
            - containerPort: 80
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: nginx-v2
#   labels:
#     app: nginx
#     version: v2
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: nginx
#       version: v2
#   template:
#     metadata:
#       name: nginx-v2
#       labels:
#         app: nginx
#         version: v2
#     spec:
#       containers:
#         - name: nginx
#           image: nginx
#           imagePullPolicy: IfNotPresent #Always
#           ports:
#             - containerPort: 80
