examples/5_FullScaleServiceWithIngress/istio-hello-world-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: nginx
    service: nginx-service
spec:
  ports:
    - port: 9090
      name: http
      targetPort: 80
  selector:
    app: nginx
