examples/5_FullScaleServiceWithIngress/mongo-express-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-app-service-v1
  labels:
    app: mongo-express
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
        version: v1
    spec:
      containers:
        - name: mongo-express #https://hub.docker.com/_/mongo-express
          image: mongo-express
          imagePullPolicy: IfNotPresent #Always
          ports:
            - containerPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-app-service-v2
  labels:
    app: mongo-express
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
        version: v2
    spec:
      containers:
        - name: mongo-express #https://hub.docker.com/_/mongo-express
          image: mongo-express
          imagePullPolicy: IfNotPresent #Always
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
  labels:
      app: mongo-express
      service: mongo-express-service
spec:
  selector:
      app: mongo-express
  ports:
    - name: http
      port: 8081
