examples/5_FullScaleServiceWithIngress/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: service-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 15021
        name: http
        protocol: HTTP
      hosts:
        - "*"
