examples/5_FullScaleServiceWithIngress/gateway_virtual_service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service
spec:
  hosts:
    - "*"
  gateways:
    - service-gateway
  http:
    - match:
        - uri:
            exact: /nginx
      rewrite:
          uri: /
      route:
        - destination:
            port:
              number: 9090
            host: nginx-service
      match:
        - uri:
            exact: /mongo
      rewrite:
          uri: /
      route:
        - destination:
            port:
              number: 8081
            host: mongo-express-service.default.svc.cluster.local
