examples/5_FullScaleServiceWithIngress/virtual-service-mongo.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-mongo
spec:
  hosts:
    - "*"
  gateways:
    - service-gateway
  http:
    - match:
        - uri:
            exact: /mongo
      rewrite:
          uri: /
      route:
        - destination:
            port:
              number: 8081
            host: mongo-express-service.default.svc.cluster.local
